testsuite/tests/vdq-rta/should_fail/T22326_fail_app.stderr

T22326_fail_app.hs:6:10: error: [GHC-35499]
    • Illegal type expression.
      A type expression must be used to instantiate a visible forall.
    • In the expression: (type Maybe) undefined
      In an equation for ‘xhead’: xhead = (type Maybe) undefined

T22326_fail_app.hs:7:20: error: [GHC-35499]
    • Illegal type expression.
      A type expression must be used to instantiate a visible forall.
    • In the first argument of ‘undefined’, namely ‘(type Int)’
      In the expression: undefined (type Int)
      In an equation for ‘xarg’: xarg = undefined (type Int)
